# claude-mnemos

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  start-mnemos.bat
.claude-plugin/: plugin.json
.github/workflows/: ci.yml  release.yml
claude_mnemos/: __main__.py  cli.py  cli_doctor.py  cli_hook.py  cli_hooks.py  cli_init.py  cli_launcher.py  cli_project.py  cli_settings.py  cli_tray.py  config.py  daemon_url.py  launcher.py  postinstall.py  runtime.py
claude_mnemos/core/: active_sessions.py  atomic.py  auto_dump.py  clock.py  cwd_detection.py  dev_supervisor.py  graph.py  health_checks.py  install_checks.py  locks.py  lost_sessions.py  metrics.py  models.py  ontology_apply.py  ontology_scan.py  ontology_similarity.py  ontology_validator.py  page_apply.py  page_io.py  pages.py  session_start.py  sessions.py  slug.py  snapshots.py  staging.py  transcript_helpers.py  transcript_scanner.py  trash.py  ttl_cache.py  undo.py  uningested_sessions.py  update_apply.py  update_check.py  update_git.py  update_recovery.py  vault_stats.py  wikilinks.py
claude_mnemos/daemon/: __init__.py  __main__.py  alerts.py  app.py  config.py  lockfile.py  our_writes.py  process.py  runtime_state.py  scheduler.py  schemas.py  vault_runtime.py  watchdog_handler.py  watchdog_observer.py
claude_mnemos/hooks/: __init__.py  errors.py
claude_mnemos/ingest/: chunk_cache.py  chunking.py  extraction.py  llm.py  pipeline.py  transcript.py
claude_mnemos/lint/: autofix.py  exceptions.py  models.py  rules.py  runner.py  state.py  utils.py
claude_mnemos/mapping/: resolver.py
claude_mnemos/mcp/: __init__.py  __main__.py  config.py  degraded.py  errors.py  schemas.py  server.py  vault_access.py
claude_mnemos/state/: activity.py  alerts_store.py  inject_metrics.py  install_state.py  jobs.py  manifest.py  ontology.py  projects.py  settings.py
claude_mnemos/tray/: __init__.py  __main__.py  icon.py  ipc.py  single_instance.py  supervisor.py
docs/plans/: 2026-04-26-activity-undo-design.md  2026-04-26-activity-undo-plan.md  2026-04-26-daemon-foundation-design.md  2026-04-26-daemon-foundation-plan.md  2026-04-26-llm-extraction-design.md  2026-04-26-llm-extraction-plan.md  2026-04-26-mcp-server-design.md  2026-04-26-mcp-server-plan.md  2026-04-26-minimal-e2e.md  2026-04-26-ontology-design.md  2026-04-26-ontology-plan.md  2026-04-26-plugin-hooks-design.md  2026-04-26-plugin-hooks-plan.md  2026-04-26-staging-snapshots-design.md  2026-04-26-staging-snapshots-plan.md  2026-04-27-13b-alpha-settings-projectmap-design.md  2026-04-27-13b-alpha-settings-projectmap-plan.md  2026-04-27-jobs-queue-design.md  2026-04-27-jobs-queue-plan.md  2026-04-27-lint-design.md  2026-04-27-lint-plan.md  2026-04-27-page-edit-trash-design.md  2026-04-27-page-edit-trash-plan.md  2026-04-27-sessions-metrics-design.md  2026-04-27-sessions-metrics-plan.md  2026-04-27-watchdog-realtime-design.md  2026-04-27-watchdog-realtime-plan.md  2026-04-28-13b-beta1-multivault-foundation-design.md  2026-04-28-13b-beta1-multivault-foundation-plan.md  2026-04-28-13b-beta2-route-project-params-design.md  2026-04-28-13b-beta2-route-project-params-plan.md  2026-04-29-13c-session-start-inject-design.md  2026-04-29-13c-session-start-inject-plan.md  2026-04-29-13d-inject-polish-metric-design.md  2026-04-29-13d-inject-polish-metric-plan.md  2026-04-29-13e-final-polish-design.md  2026-04-29-13e-final-polish-plan.md  2026-04-29-14a-frontend-foundation-design.md  2026-04-29-14a-frontend-foundation-plan.md  2026-04-29-14b-1-browse-views-design.md  (+24 more)
frontend/: eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  i18n.ts  main.tsx  setup-tests.ts
hooks/: hooks.json  pre_compact.py  session_end.py  session_start.py
installer/: set_version.py
installer/linux/: README.md  build-appimage.sh  claude-mnemos.desktop
installer/macos/: README.md  build-dmg.sh  setup.py
installer/pyinstaller/: README.md  mnemos.spec
installer/windows/: README.md  build.ps1  mnemos.iss
skills/mnemos/: SKILL.md
skills/mnemos-activity/: SKILL.md
skills/mnemos-search/: SKILL.md
skills/mnemos-status/: SKILL.md
skills/mnemos-undo/: SKILL.md
tests/: conftest.py  test_activity.py  test_atomic.py  test_cli.py  test_cli_daemon_multivault.py  test_cli_doctor.py  test_cli_hook.py  test_cli_hooks.py  test_cli_init.py  test_cli_jobs.py  test_cli_launcher.py  test_cli_lint.py  test_cli_lost_sessions.py  test_cli_metrics.py  test_cli_ontology.py  test_cli_pages.py  test_cli_project.py  test_cli_sessions.py  test_cli_settings.py  test_cli_tokenizer_probe.py  test_cli_trash.py  test_cli_tray.py  test_compression_summary.py  test_compression_timeline.py  test_config.py  test_config_ingest_provider.py  test_daemon_url.py  test_extraction.py  test_graph.py  test_import.py  test_inject_metrics.py  test_launcher.py  test_llm.py  test_locks.py  test_manifest.py  test_models.py  test_ontology_apply.py  test_pid_file_migration.py  test_pipeline.py  test_postinstall.py  (+14 more)
tests/core/: test_active_sessions.py  test_auto_dump.py  test_cwd_detection.py  test_health_checks.py  test_install_checks.py  test_lost_sessions.py  test_lost_sessions_ignore.py  test_metrics.py  test_ontology_scan_heuristic.py  test_ontology_scan_orchestrator.py  test_ontology_similarity.py  test_ontology_validator.py  test_page_apply.py  test_page_io.py  test_pages.py  test_sessions.py  test_snapshots_preview.py  test_transcript_scanner.py  test_trash.py  test_ttl_cache.py  test_update_apply.py  test_update_check.py  test_update_git.py  test_update_recovery.py  test_vault_stats.py
tests/daemon/: conftest.py  test_alerts.py  test_app_activity.py  test_app_alerts.py  test_app_daemon_routes.py  test_app_dashboard.py  (+60 more)
(+559 files in other folders)
