[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-mnemos"
version = "0.0.1"
description = "Long-term structured per-project knowledge base for Claude Code sessions"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Yarik" }]
classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=2.0",
    "filelock>=3.13",
    "pyyaml>=6.0",
    "anthropic>=0.40",
    "unidecode>=1.3",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "apscheduler>=3.10",
    "psutil>=5.9",
    "httpx>=0.27",
    "mcp>=1.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "mypy>=1.11",
]

[project.scripts]
mnemos = "claude_mnemos.cli:main"
mnemos-mcp = "claude_mnemos.mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["claude_mnemos"]

[tool.hatch.build.targets.wheel.force-include]
"claude_mnemos/ingest/prompts/system.md" = "claude_mnemos/ingest/prompts/system.md"
"claude_mnemos/ingest/prompts/extract_user.md" = "claude_mnemos/ingest/prompts/extract_user.md"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
asyncio_mode = "auto"
markers = [
    "slow: tests that hit external services or take >1s",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "yaml"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "unidecode"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "apscheduler.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "psutil"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "mcp.*"
ignore_missing_imports = true
